--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -4,6 +4,6 @@ $font-size: 100%;
 body {
   font-family: $font-main;
   font-size: $font-size;
-  color: #444;
+  color: #0e0e0e;
   background-color: #fff;
 }
