handle front matter and json data per page

--- a/pages/partials/layout/default.hbs
+++ b/pages/partials/layout/default.hbs
@@ -6,7 +6,9 @@
 </head>
 <body>
   <h1>Layout Halo 2</h1>
-  <h2>{{ site.base_title }}<h2>
+  <h2>{{ site.base_title }}</h2>
+  <h2>{{ title }}</h2>
+  <h2>{{ description }}</h2>
 
   <a href="/">Home</a>
   <a href="/about.html">about</a>
