--- a/pages/pages/index.hbs
+++ b/pages/pages/index.hbs
@@ -1,3 +1,8 @@
+---
+title: YAML Front Matter
+description: A very simple way to add structured data to a page.
+---
+
 {{#> layout/default }}
   {{#*inline "content-block"}}
   <p>This is index page...</p>
