--- a/pages/partials/layout/post.hbs
+++ b/pages/partials/layout/post.hbs
@@ -5,7 +5,7 @@
   <link rel="stylesheet" media="all" href="{{ site.css_path }}">
 </head>
 <body>
-  <h1>Layout Default</h1>
+  <h1>Layout Post</h1>
   <h2>{{ site.base_title }}</h2>
   <h2>{{ title }}</h2>
   <h2>{{ description }}</h2>
