--- a/pages/partials/layouts/default.hbs
+++ b/pages/partials/layouts/default.hbs
@@ -16,6 +16,7 @@
   {{#> content-block}}
   {{/content-block}}
 
+  {{> includes/footer }}
   <script src="{{ site.js_path }}"></script>
 </body>
 </html>
