--- a/pages/partials/includes/footer.hbs
+++ b/pages/partials/includes/footer.hbs
@@ -1,8 +1,5 @@
-<footer>
-  <section id="author">
-    {{ site.author }}
-  </section>
-  <section id="copyright">
+<footer class="u-letter-box-large">
+  <section class="u-align-center" id="copyright">
     <small>&copy; Copyright {{ currentYear }}, {{ site.author }}</small>
   </section>
 </footer>
