--- a/pages/partials/includes/header.hbs
+++ b/pages/partials/includes/header.hbs
@@ -1,14 +1,11 @@
 <header>
-  <nav>
-    <ul>
-      <li>
+  <nav id="main-nav" role="navigation">
+    <ul class="menu" >
+      <li class="menu__item">
         <a href="/">Home</a>
       </li>
-      <li>
-        <a href="/about.html">about</a>
-      </li>
-      <li>
-        <a href="/welcome.html">welcome</a>
+      <li class="menu__item">
+        <a href="/about.html">About</a>
       </li>
     </ul>
   </nav>
