--- a/pages/partials/layouts/default.hbs
+++ b/pages/partials/layouts/default.hbs
@@ -2,13 +2,16 @@
 <html dir="ltr" lang="en">
   <head>
     {{> includes/meta }}
-    <link rel="stylesheet" media="all" href="assets/css/main.css">
+    <link rel="stylesheet" media="all" href="/assets/css/main.css">
   </head>
 
-  <body>
+  <body class="o-container o-container--large page u-pillar-box-large">
     {{> includes/header }}
 
-    <main role="main">
+    <main
+      role="main"
+      class="page__content"
+    >
       <h1>{{ title }}</h1>
       {{#> content-block}}
       {{/content-block}}
@@ -16,6 +19,6 @@
 
     {{> includes/footer }}
 
-    <script src="assets/js/index.js"></script>
+    <script src="/assets/js/index.js"></script>
   </body>
 </html>
