--- a/pages/partials/layouts/default.hbs
+++ b/pages/partials/layouts/default.hbs
@@ -18,6 +18,7 @@
     </main>
 
     {{> includes/footer }}
+    {{> includes/back-to-top }}
 
     <script src="/assets/js/index.js"></script>
   </body>
