--- a/pages/partials/layouts/post.hbs
+++ b/pages/partials/layouts/post.hbs
@@ -20,6 +20,7 @@
     </main>
 
     {{> includes/footer }}
+    {{> includes/back-to-top }}
 
     <script src="/assets/js/index.js"></script>
   </body>
