--- a/src/scss/1-variables/_variables.colors.scss
+++ b/src/scss/1-variables/_variables.colors.scss
@@ -6,6 +6,7 @@
   --color-text: #000;
   --color-dark: #eee;
   --color-background: #f9f9f9;
+  --color-white: #fff;
   --color-light: #fdfdfd;
   --color-link: #4267ff;
   --color-outline: #4267ff;
