--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,7 +19,9 @@
 
 /* 6 components */
 @import '6-components/components.page';
+@import '6-components/components.icons';
 @import '6-components/components.navigation';
+@import '6-components/components.scrollTopButton';
 
 /* 7 utilities */
 @import '7-utilities/utilities.boxing';
