adjust selector for usedcss

--- a/src/scss/1-variables/_variables.typography.scss
+++ b/src/scss/1-variables/_variables.typography.scss
@@ -1,6 +1,6 @@
 /* Typography */
 
-:root {
+:root, html {
   --text-font-family-sans-serif: sans-serif;
   --text-font-family-mono: monospace;
   --text-font-family: var(--text-font-family-sans-serif);
