--- a/pages/partials/includes/header.hbs
+++ b/pages/partials/includes/header.hbs
@@ -1,6 +1,17 @@
 <header>
   <nav id="main-nav" role="navigation">
     <ul class="menu" >
+      <li>
+        <a href="/">
+          <img
+            src="/assets/images/logo.svg"
+            alt="Harum Bawa Logo"
+            width="40"
+            class="u-vlign-middle"
+          >
+          <span>Harum Bawa Blog</span>
+        </a>
+      </li>
       <li class="menu__item">
         <a href="/">Home</a>
       </li>
