--- a/pages/partials/includes/meta.hbs
+++ b/pages/partials/includes/meta.hbs
@@ -30,3 +30,5 @@
 <!--  Non-Essential Social Media META Tags, But Recommended -->
 <meta property="og:site_name" content="{{ site.site_name }}">
 <meta name="twitter:image:alt" content="{{ title }}">
+
+<link rel="shortcut icon" type="image/png" href="/assets/images/logo.png"/>
