--- a/src/scss/2-mixins/_utilities.typography.scss
+++ b/src/scss/2-mixins/_utilities.typography.scss
@@ -2,6 +2,7 @@
   color: var(--color-text);
   font-weight: var(--text-font-weight);
   font-family: var(--text-font-family);
+  font-size: var(--text-font-size-medium);
   line-height: var(--text-line-height);
   direction: ltr;
   text-align: left;
