--- a/src/scss/7-utilities/_utilities.boxing.scss
+++ b/src/scss/7-utilities/_utilities.boxing.scss
@@ -7,3 +7,7 @@
   padding-right: var(--spacing-large) !important;
   padding-left: var(--spacing-large) !important;
 }
+
+.u-mrgn-bottom--0 {
+  margin-bottom: 0;
+}
