--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,8 @@
 @import '4-elements/elements.html';
 @import '4-elements/elements.code';
 @import '4-elements/elements.pre';
+@import '4-elements/elements.a';
+@import '4-elements/elements.time';
 
 /* 5 objects */
 @import '5-objects/objects.container';
