adjust to use javascript module

--- a/pages/partials/layouts/default.hbs
+++ b/pages/partials/layouts/default.hbs
@@ -3,6 +3,7 @@
   <head>
     {{> includes/meta }}
     <link rel="stylesheet" media="all" href="/assets/css/main.css">
+    <script type='module' src="/assets/module/index.js"></script>
   </head>
 
   <body class="o-container o-container--large page u-pillar-box-large">
@@ -20,6 +21,6 @@
     {{> includes/footer }}
     {{> includes/back-to-top }}
 
-    <script src="/assets/js/index.js"></script>
+    <script nomodule src="/assets/js/index.js"></script>
   </body>
 </html>
