add service worker

--- a/pages/partials/layouts/default.hbs
+++ b/pages/partials/layouts/default.hbs
@@ -18,6 +18,7 @@
       {{/content-block}}
     </main>
 
+    {{> includes/update-content }}
     {{> includes/footer }}
     {{> includes/back-to-top }}
 
