add code highlighting

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,6 +24,7 @@
 @import '6-components/components.icons';
 @import '6-components/components.navigation';
 @import '6-components/components.scrollTopButton';
+@import '6-components/components.vendor.prism';
 
 /* 7 utilities */
 @import '7-utilities/utilities.boxing';
