--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,7 +25,7 @@
 @import '6-components/components.navigation';
 @import '6-components/components.scrollTopButton';
 @import '6-components/components.avatar';
-@import '6-components/components.vendor.prism';
+// @import '6-components/components.vendor.prism';
 
 /* 7 utilities */
 @import '7-utilities/utilities.boxing';
