--- a/pages/partials/includes/meta.hbs
+++ b/pages/partials/includes/meta.hbs
@@ -31,4 +31,4 @@
 <meta property="og:site_name" content="{{ site.site_name }}">
 <meta name="twitter:image:alt" content="{{ title }}">
 
-<link rel="shortcut icon" type="image/webp" href="/assets/images/logo.webp"/>
+<link rel="shortcut icon" type="image/png" href="/assets/images/logo.png"/>
