--- a/src/scss/6-components/_components.scrollTopButton.scss
+++ b/src/scss/6-components/_components.scrollTopButton.scss
@@ -24,7 +24,7 @@
 .c-scroll-top-button:active {
   background-color: #555;
 }
-.c-scroll-top-button.show {
+.c-scroll-top-button--visible {
   opacity: 0.3;
   visibility: visible;
 }
