--- a/projects/designSystem/scss/main.scss
+++ b/projects/designSystem/scss/main.scss
@@ -1,5 +1,16 @@
-// =============================================================================
 // 1-settings
-// =============================================================================
 @import '1-settings/settings.debugger';
-@import '1-settings/settings.typography';
+@import '1-settings/settings.variables';
+
+// 3-generic
+@import '3-generic/generic.reset';
+
+// 4-elements
+@import '4-elements/elements.html';
+@import '4-elements/elements.heading';
+@import '4-elements/elements.a';
+@import '4-elements/elements.code';
+@import '4-elements/elements.pre';
+
+// 7-utilities
+@import '7-utilities/utilities.size';
