--- a/src/scss/3-generic/_generic.reset.scss
+++ b/src/scss/3-generic/_generic.reset.scss
@@ -8,6 +8,12 @@ html {
   box-sizing: inherit;
 }
 
-body {
+html,body {
   margin: 0;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
