blockquote and cite

--- a/projects/designSystem/scss/main.scss
+++ b/projects/designSystem/scss/main.scss
@@ -11,6 +11,8 @@
 @import '4-elements/elements.a';
 @import '4-elements/elements.code';
 @import '4-elements/elements.pre';
+@import '4-elements/elements.blockquote';
+@import '4-elements/elements.cite';
 
 // 7-utilities
 @import '7-utilities/utilities.size';
