--- a/projects/designSystem/scss/4-elements/_elements.blockquote.scss
+++ b/projects/designSystem/scss/4-elements/_elements.blockquote.scss
@@ -10,6 +10,7 @@ blockquote {
 }
 
 blockquote::before {
+  font-family: var(--text-font-family);
   content: "\201C";
   color: var(--color-brand);
   position: absolute;
