--- a/projects/designSystem/scss/4-elements/_elements.heading.scss
+++ b/projects/designSystem/scss/4-elements/_elements.heading.scss
@@ -1,3 +1,12 @@
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: var(--spacing-medium-large);
+}
+
 h1 {
   font-size: var(--text-font-size-super);
 }
