--- a/projects/designSystem/scss/1-settings/_settings.variables.scss
+++ b/projects/designSystem/scss/1-settings/_settings.variables.scss
@@ -5,7 +5,8 @@
 
 :root {
   // colors --
-  --color-text: #000;
+  --color-text: #000000;
+  --color-white: #ffffff;
   --color-brand-lightest: #ffefef;
   --color-brand-lighter: #eea18e;
   --color-brand-light: #d6624a;
