--- a/projects/designSystem/scss/main.scss
+++ b/projects/designSystem/scss/main.scss
@@ -22,6 +22,7 @@
 // 6-objects
 @import '6-components/components.navigation';
 @import '6-components/components.avatar';
+@import '6-components/components.scroll-top-button';
 
 // 7-utilities
 // @import '7-utilities/utilities.size';
