--- a/projects/designSystem/docs/partials/footer.hbs
+++ b/projects/designSystem/docs/partials/footer.hbs
@@ -1,5 +1,5 @@
 <footer class="u-pad-v--xlarge">
   <section class="u-align-center" id="copyright">
-    <small>&copy; Copyright {{ currentYear }}, {{ site.author }}</small>
+    <small>&copy; Copyright 2019, Putu Harum Bawa</small>
   </section>
 </footer>
