--- a/projects/blog/partials/layouts/post.hbs
+++ b/projects/blog/partials/layouts/post.hbs
@@ -3,7 +3,7 @@
   <head>
     {{> includes/meta }}
     <link rel="stylesheet" media="all" href="/assets/css/main.css">
-    <script type='module' src="/assets/module/index.js"></script>
+    <script type='module' src="/assets/js/modules/index.js"></script>
   </head>
 
   <body class="o-container o-container--medium o-page u-pad-h--xlarge">
@@ -24,6 +24,6 @@
     {{> includes/footer }}
     {{> includes/back-to-top }}
 
-    <script nomodule src="/assets/js/index.js"></script>
+    <script nomodule src="/assets/js/bundles/index.js"></script>
   </body>
 </html>
