--- a/projects/blog/partials/layouts/default.hbs
+++ b/projects/blog/partials/layouts/default.hbs
@@ -2,6 +2,7 @@
 <html dir="ltr" lang="en">
   <head>
     {{> includes/meta }}
+    {{> includes/google-analytics }}
     <link rel="stylesheet" media="all" href="/assets/css/main.css">
     <script type='module' src="/assets/js/modules/index.js"></script>
   </head>
