adjust blog navigation

--- a/projects/blog/partials/includes/header.hbs
+++ b/projects/blog/partials/includes/header.hbs
@@ -1,8 +1,8 @@
 <header>
   <nav id="main-nav" role="navigation">
-    <ul class="c-navigation" >
-      <li>
-        <a href="/">
+    <div class="c-navigation" >
+      <div>
+        <a href="https://harumbawa.com">
           <img
             src="/assets/images/logo.svg"
             alt="Harum Bawa Logo"
@@ -11,11 +11,12 @@
           >
           <span>Home</span>
         </a>
-      </li>
-      <li>
+      </div>
+      <div>
+        <a href="/" class="u-mrgn-right--small">Posts</a>
         <a href="/about.html">About</a>
-      </li>
-    </ul>
+      </div>
+    </div>
   </nav>
 </header>
 
