--- a/projects/blog/partials/includes/meta.hbs
+++ b/projects/blog/partials/includes/meta.hbs
@@ -24,8 +24,7 @@
 <!--  Essential Social Media META Tags -->
 <meta property="og:title" content="{{ title }}">
 <meta property="og:description" content="{{ description }}">
-<meta property="og:image" content="http://euro-travel-example.com/thumbnail.jpg">
-<meta property="og:url" content="http://euro-travel-example.com/index.htm">
+<meta property="og:image" content="/assets/images/thumbnail.png">
 <meta name="twitter:card" content="summary_large_image">
 
 <!--  Non-Essential Social Media META Tags, But Recommended -->
