--- a/projects/blog/partials/layouts/default.hbs
+++ b/projects/blog/partials/layouts/default.hbs
@@ -7,12 +7,12 @@
     <script type='module' src="/assets/js/modules/index.js"></script>
   </head>
 
-  <body class="o-container o-container--medium o-page u-pad-h--xlarge">
+  <body class="o-container o-container--medium o-page u-pad-v--xlarge u-pad-h--xlarge">
     {{> includes/header }}
 
     <main
       role="main"
-      class="page__content"
+      class="o-page__content"
     >
       <h1>{{ title }}</h1>
       {{#> content-block}}
