--- a/projects/designSystem/scss/7-utilities/_utilities.spacing.scss
+++ b/projects/designSystem/scss/7-utilities/_utilities.spacing.scss
@@ -2,6 +2,10 @@
   margin-top: 0;
 }
 
+.u-mrgn-right--small {
+  margin-right: var(--spacing-small);
+}
+
 .u-pad-v--xlarge {
   padding-top: var(--spacing-xlarge);
   padding-bottom: var(--spacing-xlarge);
