--- a/projects/designSystem/scss/_landingPage.scss
+++ b/projects/designSystem/scss/_landingPage.scss
@@ -1,5 +1,4 @@
 // 1-settings
-// @import '1-settings/settings.debugger';
 @import '1-settings/settings.variables';
 
 // 3-generic
@@ -7,13 +6,8 @@
 
 // 4-elements
 @import '4-elements/elements.html';
-@import '4-elements/elements.heading';
 @import '4-elements/elements.a';
-@import '4-elements/elements.code';
-@import '4-elements/elements.pre';
-@import '4-elements/elements.blockquote';
-@import '4-elements/elements.cite';
-@import '4-elements/elements.time';
+@import '4-elements/elements.address';
 
 // 5-objects
 @import '5-objects/objects.container';
@@ -22,9 +16,7 @@
 // 6-components
 @import '6-components/components.navigation';
 @import '6-components/components.avatar';
-@import '6-components/components.scroll-top-button';
 
 // 7-utilities
-// @import '7-utilities/utilities.size';
 @import '7-utilities/utilities.spacing';
 @import '7-utilities/utilities.alignment';
