syntax highlight with prism

--- a/projects/blog/partials/layouts/post.hbs
+++ b/projects/blog/partials/layouts/post.hbs
@@ -4,7 +4,7 @@
     {{> includes/meta }}
     {{> includes/google-analytics }}
     <link rel="stylesheet" media="all" href="/assets/css/main.css">
-    <script type='module' src="/assets/js/modules/index.js"></script>
+    <script type='module' src="/assets/js/modules/blog.js"></script>
   </head>
 
   <body class="o-container o-container--medium o-page u-pad-v--xlarge u-pad-h--xlarge">
@@ -25,6 +25,6 @@
     {{> includes/footer }}
     {{> includes/back-to-top }}
 
-    <script nomodule src="/assets/js/bundles/index.js"></script>
+    <script nomodule src="/assets/js/bundles/blog.js"></script>
   </body>
 </html>
